# va-legislature-datasette

./: .gitignore  MANIFEST.in  README.md  metadata.yml  pyproject.toml  tests.py
.github/workflows/: download-files.yml
tests/: test_va_legislature_datasette.py
va_legislature_datasette/: extract.py  load.py
va_legislature_datasette/lis_data/: Amendments.csv  BILLS.csv  CIBillSubjects.csv  CIParentChildSubjects.csv  CommitteeMembers.csv  Committees.csv  DOCKET.csv  FiscalImpactStatements.csv  HISTORY.csv  Members.csv  SUBDOCKET.csv  Sponsors.csv  SubCommitteeMembers.csv  Summaries.csv  Test.txt  VOTE.csv  VoteStatements.csv
view_templates/: row-lis-bills.html
